syntax = "proto3";

package user;



message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string created_at = 4;
  string updated_at = 5;
  string profile_picture = 6; 
  repeated string preferences = 7; 
}



message RegisterUserRequest {
  string name = 1;
  string email = 2;
}

message RegisterUserResponse {
  User user = 1;
  string error_message = 2; 
}

message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  User user = 1;
  string error_message = 2; 
}

message UpdateUserRequest {
  string user_id = 1;
  string name = 2;
  string email = 3;
}

message UpdateUserResponse {
  User user = 1;
  string error_message = 2; 
}

message DeleteUserRequest {
  string user_id = 1;
}

message DeleteUserResponse {
  bool success = 1;
  string error_message = 2; 
}



message UserActivityEvent {
  string event_type = 1; 
  string user_id = 2;
  string movie_id = 3;
  string timestamp = 4;
  float rating = 5; 
  int32 watch_duration = 6;
}

message UserEventAck {
  bool success = 1;
  string message_id = 2;
}



service UserService {
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  rpc EmitUserActivity(stream UserActivityEvent) returns (stream UserEventAck);
}